<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/login_username"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="160dp"
            android:hint="@string/username"
            />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/login"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:text="@string/login"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/are_you_new"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/register"
                android:textColor="@color/colorPrimaryDark"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>